Migrations added and setintializer (final steps for SD2)

--- a/HG151515_MIS4200/Views/Instructors/Delete.cshtml
+++ b/HG151515_MIS4200/Views/Instructors/Delete.cshtml
@@ -43,6 +43,14 @@
             @Html.DisplayFor(model => model.instructorPhone)
         </dd>
 
+        <dt>
+            @Html.DisplayNameFor(model => model.schoolID)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.schoolID)
+        </dd>
+
     </dl>
 
     @using (Html.BeginForm()) {
