--- a/HG151515_MIS4200/Views/Instructors/Details.cshtml
+++ b/HG151515_MIS4200/Views/Instructors/Details.cshtml
@@ -42,6 +42,14 @@
             @Html.DisplayFor(model => model.instructorPhone)
         </dd>
 
+        <dt>
+            @Html.DisplayNameFor(model => model.schoolID)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.schoolID)
+        </dd>
+
     </dl>
 </div>
 <p>
