--- a/HG151515_MIS4200/Views/Instructors/Index.cshtml
+++ b/HG151515_MIS4200/Views/Instructors/Index.cshtml
@@ -23,6 +23,9 @@
         <th>
             @Html.DisplayNameFor(model => model.instructorPhone)
         </th>
+        <th>
+            @Html.DisplayNameFor(model => model.schoolID)
+        </th>
         <th></th>
     </tr>
 
@@ -39,6 +42,9 @@
         </td>
         <td>
             @Html.DisplayFor(modelItem => item.instructorPhone)
+        </td>
+        <td>
+            @Html.DisplayFor(modelItem => item.schoolID)
         </td>
         <td>
             @Html.ActionLink("Edit", "Edit", new { id=item.instructorID }) |
